chore: WSC-959 use generated id for room and user avatar picture metadata (#55)