@@ -136,7 +136,7 @@ public class RoomServiceImpl implements RoomService {
           rooms.stream()
               .filter(room -> RoomTypeDto.WORKSPACE.equals(room.getType()))
               .map(Room::getId)
-              .collect(Collectors.toList());
+              .toList();
       settingsMap =
           roomUserSettingsRepository.getMapByRoomsIdsAndUserIdGroupedByRoomsIds(
               ids, currentUser.getId());
@@ -196,7 +196,7 @@ public class RoomServiceImpl implements RoomService {
       List<RoomUserSettings> roomUserSettings = new ArrayList<>();
       Map<String, RoomUserSettings> maxRanksMapByUsers =
           roomUserSettingsRepository.getWorkspaceMaxRanksMapGroupedByUsers(
-              membersIds.stream().map(UUID::toString).collect(Collectors.toList()));
+              membersIds.stream().map(UUID::toString).toList());
       for (UUID memberId : membersIds) {
         RoomUserSettings maxRank = maxRanksMapByUsers.get(memberId.toString());
         roomUserSettings.add(
@@ -227,7 +227,7 @@ public class RoomServiceImpl implements RoomService {
     }
     UUID finalId = UUID.fromString(room.getId());
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         RoomCreated.create().roomId(finalId));
     return roomMapper.ent2dto(
         room,
@@ -278,7 +278,7 @@ public class RoomServiceImpl implements RoomService {
         }
         break;
       case CHANNEL:
-        if (membersSet.size() > 0) {
+        if (!membersSet.isEmpty()) {
           throw new BadRequestException("Channels don't admit members");
         }
         if (roomCreationFields.getParentId() == null) {
@@ -295,7 +295,7 @@ public class RoomServiceImpl implements RoomService {
         .filter(memberId -> !userService.userExists(memberId, currentUser))
         .findFirst()
         .ifPresent(
-            (uuid) -> {
+            uuid -> {
               throw new NotFoundException(
                   String.format("User with identifier '%s' not found", uuid));
             });
@@ -324,9 +324,7 @@ public class RoomServiceImpl implements RoomService {
     if (changed) {
       roomRepository.update(room);
       eventDispatcher.sendToUserExchange(
-          room.getSubscriptions().stream()
-              .map(Subscription::getUserId)
-              .collect(Collectors.toList()),
+          room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
           RoomUpdated.create()
               .roomId(roomId)
               .name(room.getName())
@@ -375,7 +373,7 @@ public class RoomServiceImpl implements RoomService {
       messageDispatcher.deleteRoom(roomId.toString(), currentUser.getId());
     }
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         RoomDeleted.create().roomId(roomId));
   }
 
@@ -435,7 +433,7 @@ public class RoomServiceImpl implements RoomService {
   public List<UUID> getRoomsIds(UserPrincipal currentUser) {
     return roomRepository.getIdsByUserId(currentUser.getId()).stream()
         .map(UUID::fromString)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -486,18 +484,22 @@ public class RoomServiceImpl implements RoomService {
     getRoomEntityAndCheckUser(roomId, currentUser, false);
     FileMetadata metadata =
         fileMetadataRepository
-            .getById(roomId.toString())
+            .find(null, roomId.toString(), FileMetadataType.ROOM_AVATAR)
             .orElseThrow(
                 () -> new NotFoundException(String.format("File with id '%s' not found", roomId)));
     return new FileContentAndMetadata(
-      storagesService.getFileStreamById(metadata.getId(), metadata.getUserId()),
-      metadata);
+        storagesService.getFileStreamById(metadata.getId(), metadata.getUserId()), metadata);
   }
 
   @Override
   @Transactional
   public void setRoomPicture(
-      UUID roomId, InputStream image, String mimeType, Long contentLength, String fileName, UserPrincipal currentUser) {
+      UUID roomId,
+      InputStream image,
+      String mimeType,
+      Long contentLength,
+      String fileName,
+      UserPrincipal currentUser) {
     Room room = getRoomEntityAndCheckUser(roomId, currentUser, true);
     if (!RoomTypeDto.GROUP.equals(room.getType())) {
       throw new BadRequestException("The room picture can only be set to group type rooms");
@@ -514,35 +516,33 @@ public class RoomServiceImpl implements RoomService {
     if (!mimeType.startsWith("image/")) {
       throw new BadRequestException("The room picture must be an image");
     }
-    Optional<FileMetadata> oldMetadata = fileMetadataRepository.getById(roomId.toString());
-    Optional<String> oldUser = oldMetadata.map(FileMetadata::getUserId);
+    Optional<FileMetadata> oldMetadata =
+        fileMetadataRepository.find(null, roomId.toString(), FileMetadataType.ROOM_AVATAR);
+    room.pictureUpdatedAt(OffsetDateTime.ofInstant(clock.instant(), clock.getZone()));
     FileMetadata metadata =
-        oldMetadata
-            .orElseGet(
-                () ->
-                    FileMetadata.create()
-                        .id(roomId.toString())
-                        .type(FileMetadataType.ROOM_AVATAR)
-                        .roomId(roomId.toString()))
+        FileMetadata.create()
+            .id(UUID.randomUUID().toString())
+            .type(FileMetadataType.ROOM_AVATAR)
+            .roomId(roomId.toString())
             .name(fileName)
             .originalSize(contentLength)
             .mimeType(mimeType)
             .userId(currentUser.getId());
-    room.pictureUpdatedAt(OffsetDateTime.ofInstant(clock.instant(), clock.getZone()));
-    fileMetadataRepository.save(metadata);
     roomRepository.update(room);
-    if (oldUser.isPresent()) {
+    if (oldMetadata.isPresent()) {
+      fileMetadataRepository.delete(oldMetadata.get());
       try {
-        storagesService.deleteFile(metadata.getId(), oldUser.get());
+        storagesService.deleteFile(oldMetadata.get().getId(), oldMetadata.get().getUserId());
       } catch (Exception e) {
         ChatsLogger.warn("Could not delete older group profile picture: " + e.getMessage());
       }
     }
+    fileMetadataRepository.save(metadata);
     storagesService.saveFile(image, metadata, currentUser.getId());
     messageDispatcher.updateRoomPicture(
         room.getId(), currentUser.getId(), metadata.getId(), metadata.getName());
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         RoomPictureChanged.create()
             .roomId(UUID.fromString(room.getId()))
             .updatedAt(room.getPictureUpdatedAt()));
@@ -554,7 +554,7 @@ public class RoomServiceImpl implements RoomService {
     Room room = getRoomEntityAndCheckUser(roomId, currentUser, true);
     FileMetadata metadata =
         fileMetadataRepository
-            .getById(roomId.toString())
+            .find(null, roomId.toString(), FileMetadataType.ROOM_AVATAR)
             .orElseThrow(
                 () -> new NotFoundException(String.format("File with id '%s' not found", roomId)));
     fileMetadataRepository.delete(metadata);
@@ -562,7 +562,7 @@ public class RoomServiceImpl implements RoomService {
     storagesService.deleteFile(metadata.getId(), metadata.getUserId());
     messageDispatcher.deleteRoomPicture(room.getId(), currentUser.getId());
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         RoomPictureDeleted.create().roomId(UUID.fromString(room.getId())));
   }
 
